<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iUN</string>
    <string name="title_activity_directorio">Directorio</string>
    <string name="title_activity_menu_web">Servicios en linea</string>
    <string name="title_activity_main">iUN</string>
    <string name="menu_volver">Volver</string>
    <string name="menu_URL">URL</string>
    <string name="menu_adelante">Adelante</string>
    <string name="menu_Recargar">Recargar</string>
    <string name="tipo_mapa">Cambiar Tipo</string>
    <string name="title_activity_eventos">Eventos</string>
    <string name="buscar">Buscar</string>
    <string name="trafico">Trafico</string>
    <string name="otros_sitios">Sitios Cercanos</string>
    <string name="textSwitchON">Direccion</string>
    <string name="textSwitchOFF">Departamentos</string>
    <string name="menu_mapa">Ver en el mapa</string>
    <string name="menu_irweb">Ir al Sitio</string>
    <string name="title_dato_list">datos</string>
    <string name="title_dato_detail">Directorio</string>
    <string name="title_datos_list">datos</string>
    <string name="title_datos_detail">Informacion</string>
    <string name="title_activity_radio">Radio UN</string>
    <string name="title_activity_servicios">Servicios en linea</string>
    <string name="title_activity_colegios">Instituciones</string>
    <string name="main_menu_item1">Servicios</string>
    <string name="main_menu_item2">Admisiones</string>
    <string name="main_menu_item3">Sedes</string>
    <string name="events">Eventos</string>
    <string name="title_activity_license">Licencia</string>
    <string name="drawer_open">abierto</string>
    <string name="drawer_close">cerrado</string>
    <string name="title_activity_instituciones">Instituciones</string>
    <string name="title_activity_activity_details">Información</string>
    <string name="informacion">Información</string>
    <string name="instituciones">Instituciones</string>
    <string name="admisiones">Dirección Nacional de Admisiones</string>
    <string name="markerEti">Sitios Cercanos</string>
    <string name="cancel_dialog">cancelar</string>
    <string name="disponible">Disponible Proximamente</string>
    <string name="alert_dialog1">No hemos podido ubicar los edificios</string>
    <string name="data_exception">No hay datos disponibles en el momento</string>
    <string name="cobertura_nacional">Cobertura Nacional</string>
    <string name="indications">¿Como llegar?</string>
    <string name="database">La Base de Datos se ha actualizado</string>
    <string name="web_site">Sitio Web</string>
    <string name="network_exception">No tiene conexion a la red</string>
    <string name="acept_dialog">Aceptar</string>
    <string name="expanded_app_name">Información UNAL</string>
    <string name="edificios">Edificios Universidad Nacional</string>
    <string name="opinion">Danos tu opinión</string>
    <string name="sede">Mi sede</string>
    <string name="no_hay">No hay</string>
    <string name="radio_exception">No es posible cargar el streaming por el momento</string>
    <string name="location">Latitud : %1$.4f Longitud : %2$.4f</string>
    <string name="himno">Gaudeamus igitur \nJuvenes dum sumus \nPost jucundum juventutem \nPost
        molestam senectutem \nNos habebit humus. \n \nUbi sunt qui ante nos \nIn mundo fuere?
        \nVadite ad superos \nTransite in inferos \nHos si vis videre. \n \nVita nostra brevis est
        \nBrevi finietur. \nVenit mors velociter \nRapit nos atrociter \nNemini parcetur. \n \nVivat
        academia \nVivant professores \nVivat membrum quodlibet \nVivat membra quaelibet \nSemper
        sint in flore. \n \nVivant omnes virgines \nFaciles, formosae. \nVivant et mulieres
        \nTenerae amabiles \nBonae laboriosae. \n \nVivant et republica \net qui illam regit.
        \nVivat nostra civitas, \nMaecenatum caritas \nQuae nos hic protegit. \n \nAlma Mater
        floreat \nquae nos educavit, \ncaros et conmilitones \ndissitas in regiones \nsparsos
        congregavit. \n \n(ver. C. W. Kindeleben 1781) \n
    </string>
    <string name="main_activity_sede" translatable="false">sede</string>
    <string name="details_background" translatable="false">fondo</string>
    <string name="community_un" translatable="false">Comunidad UN</string>
    <string name="general_interest" translatable="false">Interes General</string>
    <string name="community_services" translatable="false">Servicios a la Comunidad</string>
    <string name="title_activity_menu_web_tab" translatable="false">Servicios en Linea</string>

    <string name="title_section1" translatable="false">Section 1</string>
    <string name="title_section2" translatable="false">Section 2</string>
    <string name="title_section3" translatable="false">Section 3</string>

    <string name="hello_world" translatable="false">Hello world!</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_directory" translatable="false">Directory</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_example" translatable="false">Example action</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="build">edificio:</string>
    <string name="accept">Aceptar</string>
    <string name="title_activity_mapa" translatable="false">" "</string>
    <string name="title_activity_web" translatable="false">" "</string>
    <string name="iv_revolution" translatable="false">Registrarme IV Revolucion Industrial</string>
    <string name="iv_revolution_web" translatable="false">Web IV Revolucion Industrial</string>
    <string name="select_option" translatable="false">Seleccione una opcion</string>
    <string name="email_hint" translatable="false">Ingrese su correo</string>
    <string name="soon">Proximamente</string>
    <string name="timestamp_label">Hora Legal en Colombia\nInstituto Nacional de Meteorología:</string>
    <string name="android_app_feedback_subject" translatable="false">Comentarios Aplicacion iUN Android</string>
    <string name="android_app_feedback_content" translatable="false">iUN es una aplicacción de apoyo, en tal razón la información contenida en ella es solo de referencia. \n\n\n
        Envía tus comentarios acerca de la aplicación iUN respondiendo las siguientes preguntas.\n\n\n
        A. Nombres y Apellidos. \n\n\n
        B. Estudiante, Docente, Administrativo de la Universidad Nacional de Colombia o persona externa? \n\n\n
        1. ¿Cual fue la primera acción que ejecutó? \n\n\n
        2. ¿Identifica claramente las acciones de los botones e iconos?\n\n\n
        3. Si hubo un bloqueo, ¿Cual fue, si recuerda, la acción que causo esto?  \n\n\n
        4. ¿Impresión general sobre la aplicación?\n\n\n
        Gracias por su colaboración.\n
        Equipo de Desarrollo iUN.
    </string>
    <string name="university_name">Universidad Nacional de Colombia</string>
    <string name="see_on_map">Ver en el mapa</string>
    <string name="search_buildings">Buscar por edificios</string>
    <string name="developers" translatable="false">DESAROLLADORES iUNDev:\n\n
        mahiguerag\n
        afgranadosc\n
        jcrodriguezd\n
        mechaconc\n
        gromerop\n
        mrinconl\n
        aframosp\n
        gmcabanah\n
        jajaramilloa\n
        mjangaritar\n\n
        @unal.edu.co
    </string>
    <string name="license" translatable="false">
        LICENCIA DE USO\n
        aplicación móvil iUN\n\n
        A- Reglas de uso:\n
        A1- Usted estará autorizado a utilizar la aplicación móvil iUN sólo para uso personal, no comercial.\n
        A2- Puede utilizar iUN para explorar, buscar y/o navegar contenidos en su dispositivo móvil. \n
        Tenga en cuenta que la disponibilidad del contenido puede variar con base en \n
        actualizaciones de los datos del directorio o enlaces de los sitios web.\n
        B- Limitación de responsabilidad\n
        B1-. iUN, suministrará servicios con el cuidado y profesionalismo razonable.\n
        iUN no asume responsabilidades y garantías adicionales en relación con el Servicio,\n
        en particular, no garantiza que:\n
        -  El uso que usted haga del Servicio  se mantenga ininterrumpido o libre de errores.\n
        Usted acepta que ocasionalmente, iUN pueda dejar de funcionar por limitaciones de las redes Wi-Fi, o de datos.\n\n
        - El Servicio estará exento de pérdidas, corrupción, ataques, virus, interferencia o cualquier intromisión \n
        en la seguridad, los cuales serán considerados como eventos de Fuerza Mayor, y sobre los cuales iUN no será responsable.\n\n
        B2- El equipo de desarrollo iUNDev hará esfuerzos razonables por validar, actualizar y proteger \n
        la información registrada en la aplicación iUN, pero usted reconoce y acepta que dicha información es de referencia y debe ser siempre validada por usted.
    </string>
</resources>
