<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/select_option"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/input"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/register_iv"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iv_revolution" />

    <Button
        android:id="@+id/web_iv"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iv_revolution_web" />

    <Button
        android:id="@+id/events_button"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="match_parent"
        android:gravity="left"
        android:layout_height="wrap_content"
        android:text="@string/events" />

    <Button
        android:id="@+id/button_ok"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept" />

</LinearLayout>